[package]
name = "liftcalc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow           = "1"
cranelift        = "0.82"
cranelift-jit    = "0.82"
cranelift-module = "0.82"
cranelift-native = "0.82"
chumsky = "0.8"